Change toogle button to slide toogle, add wrap to aggregate cards and fix button colors

--- a/user-interface/src/app/steps/model/aggregates-settings/create-edit-dialog/create-edit-dialog.component.css
+++ b/user-interface/src/app/steps/model/aggregates-settings/create-edit-dialog/create-edit-dialog.component.css
@@ -1,5 +1,4 @@
 .actions{
-  float:right;
   padding: 2px;
 }
 
@@ -23,4 +22,22 @@
 
 .select-multiple{
   height: 100%;
+}
+
+mat-slide-toggle {
+  margin-top: 10%;
+}
+
+mat-slide-toggle .mat-slide-toggle-content span {
+  font-size: 13px !important;
+}
+
+.cancel-button {
+  background-color: #e64325;
+  color: white;
+}
+
+.save-button{
+  background-color: #00753b;
+  color: white;
 }
